--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "database": "express_auth_development",
+    "database": "fridge",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
@@ -10,8 +10,13 @@
     "dialect": "postgres"
   },
   "production": {
-    "database": "express_auth_production",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
+    "use_env_variable": "DATABASE_URL",
+    "dialect": "postgres",
+    "dialectOptions": {
+        "ssl": {
+          "require": true,
+          "rejectUnauthorized": false
+        }
+      }
   }
 }
